RESOLVED FIXED 202893
Wincairo build broken: EventLoop.h: No such file or directory
https://bugs.webkit.org/show_bug.cgi?id=202893
Summary Wincairo build broken: EventLoop.h: No such file or directory
Aakash Jain
Reported 2019-10-13 06:53:15 PDT
Wincairo build seems to be broken recently. There was a build fix in https://bugs.webkit.org/show_bug.cgi?id=202879, however, the build is now failing with another error: "..\..\Source\WebCore\platform\network\curl\SynchronousLoaderClientCurl.cpp(32): fatal error C1083: Cannot open include file: 'EventLoop.h': No such file or directory" e.g.: https://build.webkit.org/builders/WinCairo%2064-bit%20WKL%20Debug%20%28Build%29/builds/11048
Attachments
Patch removing include of EventLoop.h (1.14 KB, patch)
2019-10-13 09:22 PDT, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2019-10-13 09:22:57 PDT
Created attachment 380848 [details] Patch removing include of EventLoop.h This built for me and things I tried in minibrowser seemed to work just without the include.
WebKit Commit Bot
Comment 2 2019-10-13 16:49:09 PDT
Comment on attachment 380848 [details] Patch removing include of EventLoop.h Clearing flags on attachment: 380848 Committed r251062: <https://trac.webkit.org/changeset/251062>
WebKit Commit Bot
Comment 3 2019-10-13 16:49:11 PDT
All reviewed patches have been landed. Closing bug.
Ling Ho
Comment 4 2019-10-15 15:11:37 PDT
Note You need to log in before you can comment on or make changes to this bug.