Wincairo build broken: EventLoop.h: No such file or directory https://bugs.webkit.org/show_bug.cgi?id=202893

Reviewed by Fujii Hironori.

Remove include of EventLoop.h.

* platform/network/curl/SynchronousLoaderClientCurl.cpp:


Canonical link: https://commits.webkit.org/216352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251062 268f45cc-cd09-0410-ab3c-d52691b4dbfc